// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Component should render a basic component: basic 1`] = `
<tooltip
  props="{
  "id": "test",
  "content": "hello world",
  "children": [
    {}
  ],
  "isPopover": false,
  "placement": "top",
  "delayShow": 500
}"
>
  <div
    style="display: contents;"
  >
    <div
      class="quipucords-tooltip__wrapper"
    >
      Test tooltip
    </div>
  </div>
</tooltip>
`;

exports[`Tooltip Component should render a popover: popover 1`] = `
<tooltip
  props="{
  "id": "test",
  "isPopover": true,
  "content": "hello world",
  "children": [
    {}
  ],
  "placement": "top",
  "delayShow": 500
}"
>
  <div
    style="display: contents;"
  >
    <div
      class="quipucords-popover__wrapper"
    >
      Test popover
    </div>
  </div>
</tooltip>
`;
